feat: add HouseDetailView and SaunaDetailView

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
         <img src="" alt="" class="recent__img">
         <h3 class="heading heading--h3">{{project.title}}</h3>
         <p class="text text--sm">Размеры дома: <b>{{project.dimensions}} м</b></p>
-        <p class="text text--sm">Общая площадь: <b>{{project.square}} м²</b></p>
+        <p class="text text--sm">Общая площадь: <b>{{project.square}} м<sup>2</sup></b></p>
         <p class="text text--sm">Базовая стоимость: <b>{{project.cost}} ₽</b></p>
         <a href="/projects/{{project.full_name}}" class="button">Подробнее о доме</a>
       </li>
