--- a/templates/common.html
+++ b/templates/common.html
@@ -23,6 +23,8 @@
 
   {% include "footer.html" %}
 
+  <script src="{% static 'js/burger/burger.js' %}"></script>
+
   {% block scripts %}
   {% endblock scripts %}
 </body>
