--- a/templates/header.html
+++ b/templates/header.html
@@ -1,25 +1,5 @@
-<header class="pageHeader">
-  <nav class="mainNav">
-    <ul class="mainNav__list">
-      <li class="mainNav__item">
-        <a href="/projects/" class="mainNav__link">Проекты</a>
-      </li>
-      <li class="mainNav__item">
-        <a href="/about/" class="mainNav__link">О нас</a>
-      </li>
-      <li class="mainNav__item">
-        <a href="/design/" class="mainNav__link">Проектирование</a>
-      </li>
-      <li class="mainNav__item">
-        <a href="/production/" class="mainNav__link">Производство</a>
-      </li>
-    </ul>
-  </nav>
+{% load static %}
 
-  <a class="logo" href="/">ДомБаня</a>
-
-  <div class="header-contacts"></div>
-</header>
 <header class="pageHeader">
   <div class="pageHeader__logoWrapper">
     <div class="burger">
@@ -38,17 +18,17 @@
     <div class="social">
       <a href="https://www.youtube.com/channel/UCoj58GpShlVhV-euDQdW_nQ" class="social__item">
         <svg class="social__icon social__icon--yt" width="20" height="20">
-          <use href="{% static 'img/sprite.svg#icon-youtube' %}"></use>
+          <use href="{% static 'img/sprite.svg' %}#icon-youtube"></use>
         </svg>
       </a>
       <a href="https://www.facebook.com/kirovdt" class="social__item">
         <svg class="social__icon social__icon--fb" width="20" height="20">
-          <use href="{% static 'img/sprite.svg#icon-facebook' %}"></use>
+          <use href="{% static 'img/sprite.svg' %}#icon-facebook"></use>
         </svg>
       </a>
       <a href="https://www.instagram.com/dom_banya_msk/" class="social__item">
         <svg class="social__icon social__icon--insta" width="20" height="20">
-          <use href="{% static 'img/sprite.svg#icon-instagram' %}"></use>
+          <use href="{% static 'img/sprite.svg' %}#icon-instagram"></use>
         </svg>
       </a>
     </div>
